--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.1.2
+  dio: ^5.6.0
+  intl: ^0.19.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +63,34 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/categories/light/automotivo.png
+    - assets/categories/light/brinquedos.png
+    - assets/categories/light/decor.png
+    - assets/categories/light/eletrodomesticos.png
+    - assets/categories/light/games.png
+    - assets/categories/light/informatica.png
+    - assets/categories/light/moda.png
+    - assets/categories/light/telefonia.png
+    - assets/categories/light/tv.png
+    - assets/categories/dark/automotivo.png
+    - assets/categories/dark/brinquedos.png
+    - assets/categories/dark/decor.png
+    - assets/categories/dark/eletrodomesticos.png
+    - assets/categories/dark/games.png
+    - assets/categories/dark/informatica.png
+    - assets/categories/dark/moda.png
+    - assets/categories/dark/telefonia.png
+    - assets/categories/dark/tv.png
+    - assets/categories/dark-yellow/automotivo.png
+    - assets/categories/dark-yellow/brinquedos.png
+    - assets/categories/dark-yellow/decor.png
+    - assets/categories/dark-yellow/eletrodomesticos.png
+    - assets/categories/dark-yellow/games.png
+    - assets/categories/dark-yellow/informatica.png
+    - assets/categories/dark-yellow/moda.png
+    - assets/categories/dark-yellow/telefonia.png
+    - assets/categories/dark-yellow/tv.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
